--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,7 @@ services:
     hostname: greeter-service
 
   consul-xds:
+    image: consul_envoy_xds_placeholder
     hostname: consul-xds
     command: "/opt/consul_envoy_xds/consul_envoy_xds/consul-envoy-xds start"
     networks:
